--- a/AndroidBootstrap/src/main/res/values/attrs.xml
+++ b/AndroidBootstrap/src/main/res/values/attrs.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Common attributes -->
     <attr name="bootstrapType" format="enum">
         <enum name="primary" value="0"/>
         <enum name="secondary" value="1"/>
@@ -28,6 +29,8 @@
     <attr name="showOutline" format="boolean" />
     <attr name="roundedCorners" format="boolean" />
 
+    <!-- View attributes -->
+
     <declare-styleable name="FontAwesomeText">
         <attr name="fa_icon" format="string" />
         <attr name="bootstrapText" format="string" />
@@ -47,11 +50,6 @@
     <declare-styleable name="BootstrapEditText">
         <attr name="be_roundedCorners" format="boolean" />
         <attr name="be_state" format="string" />
-        <attr name="android:textSize" />
-        <attr name="android:text" />
-        <attr name="android:hint" />
-        <attr name="android:enabled" />
-        <attr name="android:gravity" />
     </declare-styleable>
 
     <declare-styleable name="BootstrapThumbnail">
