--- a/AndroidBootstrap/src/main/res/layout/bootstrap_thumbnail_circle.xml
+++ b/AndroidBootstrap/src/main/res/layout/bootstrap_thumbnail_circle.xml
@@ -21,7 +21,7 @@
             android:id="@+id/image"
             />
 
-        <com.beardedhen.androidbootstrap.utils.AutoResizeTextView
+        <com.beardedhen.androidbootstrap.support.AutoResizeTextView
             android:id="@+id/dimensionsLabel"
             android:layout_width="match_parent"
             android:layout_height="100dp"
