--- a/AndroidBootstrap/src/main/res/values/attrs.xml
+++ b/AndroidBootstrap/src/main/res/values/attrs.xml
@@ -3,27 +3,36 @@
 
     <!-- Common attributes -->
     <attr name="bootstrapType" format="enum">
-        <enum name="primary" value="0"/>
-        <enum name="secondary" value="1"/>
-        <enum name="success" value="2"/>
-        <enum name="warning" value="3"/>
-        <enum name="danger" value="4"/>
-        <enum name="link" value="5"/>
+        <enum name="primary" value="0" />
+        <enum name="secondary" value="1" />
+        <enum name="success" value="2" />
+        <enum name="warning" value="3" />
+        <enum name="danger" value="4" />
+        <enum name="link" value="5" />
+    </attr>
+
+    <attr name="labelType" format="enum">
+        <enum name="labelDefault" value="0" />
+        <enum name="primary" value="1" />
+        <enum name="success" value="2" />
+        <enum name="info" value="3" />
+        <enum name="warning" value="4" />
+        <enum name="danger" value="5" />
     </attr>
 
     <attr name="bootstrapSize" format="enum">
-        <enum name="medium" value="0"/>
-        <enum name="small" value="1"/>
-        <enum name="large" value="2"/>
+        <enum name="medium" value="0" />
+        <enum name="small" value="1" />
+        <enum name="large" value="2" />
     </attr>
 
     <attr name="bootstrapHeading" format="enum">
-        <enum name="h1" value="0"/>
-        <enum name="h2" value="1"/>
-        <enum name="h3" value="2"/>
-        <enum name="h4" value="3"/>
-        <enum name="h5" value="4"/>
-        <enum name="h6" value="5"/>
+        <enum name="h1" value="0" />
+        <enum name="h2" value="1" />
+        <enum name="h3" value="2" />
+        <enum name="h4" value="3" />
+        <enum name="h5" value="4" />
+        <enum name="h6" value="5" />
     </attr>
 
     <attr name="showOutline" format="boolean" />
@@ -31,20 +40,21 @@
 
     <!-- View attributes -->
 
-    <declare-styleable name="FontAwesomeText">
+    <declare-styleable name="AwesomeTextView">
         <attr name="fa_icon" format="string" />
         <attr name="bootstrapText" format="string" />
     </declare-styleable>
 
     <declare-styleable name="BootstrapLabel">
-        <attr name="bootstrapHeading"/>
+        <attr name="bootstrapHeading" />
+        <attr name="labelType" />
     </declare-styleable>
 
     <declare-styleable name="BootstrapButton">
-        <attr name="showOutline"/>
-        <attr name="roundedCorners"/>
-        <attr name="bootstrapType"/>
-        <attr name="bootstrapSize"/>
+        <attr name="showOutline" />
+        <attr name="roundedCorners" />
+        <attr name="bootstrapType" />
+        <attr name="bootstrapSize" />
     </declare-styleable>
 
     <declare-styleable name="BootstrapEditText">
