--- a/AndroidBootstrap/src/main/res/values/colors.xml
+++ b/AndroidBootstrap/src/main/res/values/colors.xml
@@ -103,4 +103,15 @@
     <color name="bootstrap_btn_link_fill_active">#00000000</color>
     <color name="bootstrap_btn_link_edge_active">#00000000</color>
 
+
+    <!-- Labels -->
+
+
+    <color name="bootstrap_lbl_default_fill">#818a91</color>
+    <color name="bootstrap_lbl_primary_fill">#0275d8</color>
+    <color name="bootstrap_lbl_success_fill">#5cb85c</color>
+    <color name="bootstrap_lbl_info_fill">#5bc0de</color>
+    <color name="bootstrap_lbl_warning_fill">#f0ad4e</color>
+    <color name="bootstrap_lbl_danger_fill">#d9534f</color>
+
 </resources>
