add rounded corners to labels

--- a/AndroidBootstrap/src/main/res/values/attrs.xml
+++ b/AndroidBootstrap/src/main/res/values/attrs.xml
@@ -48,6 +48,7 @@
     <declare-styleable name="BootstrapLabel">
         <attr name="bootstrapHeading" />
         <attr name="labelType" />
+        <attr name="roundedCorners" />
     </declare-styleable>
 
     <declare-styleable name="BootstrapButton">
