animate change in progress

--- a/sample/src/main/res/layout/example_bprogress.xml
+++ b/sample/src/main/res/layout/example_bprogress.xml
@@ -16,6 +16,7 @@
         />
 
     <com.beardedhen.androidbootstrap.BootstrapProgressBar
+        android:id="@+id/example_progress_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/micro_padding"
